--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "auth0": "^2.4.0",
+    "auth0-log-extensions-base": "git+https://github.com/zxan1285/auth0-log-extensions-base.git",
     "auth0-extension-express-tools": "1.1.6",
     "auth0-extension-tools": "1.3.1",
     "auth0-extension-ui": "^1.0.1",
