--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "build": "npm run clean && npm run client:build && npm run extension:build",
     "clean": "rimraf dist",
+    "a0-test": "a0-log-ui:build",
     "client:build": "npm run clean && cross-env NODE_ENV=production webpack --config ./build/webpack/config.prod.js --colors -p",
     "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-logs-to-cloudwatch.extension.$npm_package_version.js ./build/bundle.js",
     "lint:js": "eslint --ignore-path .gitignore --ignore-pattern build --ignore-pattern webpack .",
@@ -117,6 +118,7 @@
   },
   "devDependencies": {
     "auth0-extensions-cli": "~1.0.5",
+    "auth0-log-extensions-ui": "git+https://github.com/zxan1285/auth0-log-extensions-ui.git",
     "autoprefixer": "^6.3.6",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
