--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
       "body-parser@1.12.4",
       "mime-types@2.0.12",
       "webtask-tools"
-    ]
+    ],
+    "settings": {
+      "UI_VERSION": "0.1"
+    }
   },
   "dependencies": {
     "async": "^1.5.2",
