--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "clean": "rimraf dist",
     "a0-test": "a0-log-ui:build",
     "client:build": "npm run clean && cross-env NODE_ENV=production webpack --config ./build/webpack/config.prod.js --colors -p",
-    "extension:build": "a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-logs-to-cloudwatch.extension.$npm_package_version.js ./build/bundle.js",
+    "extension:build": "npm run log-types && a0-ext build:server ./webtask.js ./dist && cp ./dist/auth0-logs-to-cloudwatch.extension.$npm_package_version.js ./build/bundle.js",
     "lint:js": "eslint --ignore-path .gitignore --ignore-pattern build --ignore-pattern webpack .",
     "serve:dev": "cross-env NODE_ENV=development gulp run --gulpfile ./build/gulpfile.js",
     "serve:prod": "cross-env NODE_ENV=production node index.js",
-    "tag": "git tag $npm_package_version && git push --tags"
+    "tag": "git tag $npm_package_version && git push --tags",
+    "log-types": "node ./getLogTypes.js"
   },
   "auth0-extension": {
     "externals": [
