--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "auth0": "^2.4.0",
-    "auth0-extension-express-tools": "1.1.6",
+    "auth0-extension-express-tools": "git+https://github.com/zxan1285/auth0-extension-express-tools.git#public-wt-url",
     "auth0-extension-tools": "1.3.1",
     "auth0-extension-ui": "^1.0.1",
     "auth0-log-extension-tools": "^1.3.1",
@@ -115,7 +115,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "auth0-extensions-cli": "~1.0.5",
+    "auth0-extensions-cli": "~1.0.9",
     "autoprefixer": "^6.3.6",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
