--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
   "dependencies": {
     "async": "^1.5.2",
     "auth0": "^2.4.0",
-    "auth0-extension-express-tools": "git+https://github.com/zxan1285/auth0-extension-express-tools.git#public-wt-url",
+    "auth0-extension-express-tools": "1.1.6",
     "auth0-extension-tools": "1.3.1",
     "auth0-extension-ui": "^1.0.1",
-    "auth0-log-extension-tools": "^1.3.1",
+    "auth0-log-extension-tools": "1.3.2",
     "auth0-oauth2-express": "^1.1.8",
     "aws-sdk": "2.197.0",
     "axios": "^0.15.0",
